Replaces "UTF-8" strings with StandardCharsets.UTF_8 #3610