@@ -32,6 +32,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URLEncoder;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 @HopServerServlet(id = "pausePipeline", name = "Pause or continue a pipeline")
 public class PausePipelineServlet extends BaseHttpServlet implements IHopServerPlugin {
@@ -84,9 +85,9 @@ public class PausePipelineServlet extends BaseHttpServlet implements IHopServerP
             "<META http-equiv=\"Refresh\" content=\"2;url="
                 + convertContextPath(GetPipelineStatusServlet.CONTEXT_PATH)
                 + "?name="
-                + URLEncoder.encode(pipelineName, "UTF-8")
+                + URLEncoder.encode(pipelineName, UTF_8)
                 + "&id="
-                + URLEncoder.encode(id, "UTF-8")
+                + URLEncoder.encode(id, UTF_8)
                 + "\">");
         out.println("<META http-equiv=\"Content-Type\" content=\"text/html; charset=UTF-8\">");
         out.println("<link rel=\"icon\" type=\"image/svg+xml\" href=\"/static/images/favicon.svg\">");        
@@ -137,9 +138,9 @@ public class PausePipelineServlet extends BaseHttpServlet implements IHopServerP
               "<a href=\""
                   + convertContextPath(GetPipelineStatusServlet.CONTEXT_PATH)
                   + "?name="
-                  + URLEncoder.encode(pipelineName, "UTF-8")
+                  + URLEncoder.encode(pipelineName, UTF_8)
                   + "&id="
-                  + URLEncoder.encode(id, "UTF-8")
+                  + URLEncoder.encode(id, UTF_8)
                   + "\">"
                   + BaseMessages.getString(PKG, "PipelineStatusServlet.BackToPipelineStatusPage")
                   + "</a><p>");
