@@ -33,6 +33,7 @@ import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.URLEncoder;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 @HopServerServlet(id = "startExec", name = "Start the execution of a pipeline")
 public class StartExecutionPipelineServlet extends BaseHttpServlet implements IHopServerPlugin {
@@ -80,7 +81,7 @@ public class StartExecutionPipelineServlet extends BaseHttpServlet implements IH
           "<META http-equiv=\"Refresh\" content=\"2;url="
               + convertContextPath(GetStatusServlet.CONTEXT_PATH)
               + "?name="
-              + URLEncoder.encode(pipelineName, "UTF-8")
+              + URLEncoder.encode(pipelineName, UTF_8)
               + "\">");
       out.println("<META http-equiv=\"Content-Type\" content=\"text/html; charset=UTF-8\">");
       out.println("<link rel=\"icon\" type=\"image/svg+xml\" href=\"/static/images/favicon.svg\">");      
@@ -125,9 +126,9 @@ public class StartExecutionPipelineServlet extends BaseHttpServlet implements IH
                 "<a href=\""
                     + convertContextPath(GetPipelineStatusServlet.CONTEXT_PATH)
                     + "?name="
-                    + URLEncoder.encode(pipelineName, "UTF-8")
+                    + URLEncoder.encode(pipelineName, UTF_8)
                     + "&id="
-                    + URLEncoder.encode(id, "UTF-8")
+                    + URLEncoder.encode(id, UTF_8)
                     + "\">Back to the pipeline status page</a><p>");
           }
         } else {
